# go-fast-contracts

./: .gitignore  .gitmodules  DEPLOY.md  README.md
.github/workflows/: cosmwasm.yml  pr.yml  test.yml
cosmwasm/: Cargo.toml  Taskfile.yaml  package-lock.json  package.json  tsconfig.json
cosmwasm/contracts/cw7683/: Cargo.toml
cosmwasm/contracts/cw7683/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs  types.rs
cosmwasm/contracts/cw7683/tests/: test_fill.rs  test_open.rs  test_resolve.rs
cosmwasm/contracts/cw7683/tests/common/: mod.rs
cosmwasm/contracts/fast-transfer-gateway/: Cargo.toml
cosmwasm/contracts/fast-transfer-gateway/src/: contract.rs  error.rs  execute.rs  fills.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
cosmwasm/contracts/fast-transfer-gateway/tests/: test_fill_order.rs  test_initiate_settlement.rs  test_initiate_timeout.rs  test_instantiate.rs  test_refund_orders.rs  test_settle_orders.rs  test_submit_order.rs
cosmwasm/contracts/fast-transfer-gateway/tests/common/: mod.rs
cosmwasm/scripts/: abi.ts  deploy.ts  deployCW7683.ts  fill.ts  instantiateContract.ts  lib.ts  migrate.ts  migrateCW7683.ts  optimize.sh  relayer.ts  setRemote.ts  settle.ts  storeContract.ts  updateConfig.ts
cosmwasm/scripts/solver/: index.ts  types.ts
solidity/broadcast/Deploy.s.sol/42161/: run-1723837451.json
solidity/broadcast/Deploy2.s.sol/42161/: run-1727955773.json  run-1728493798.json  run-latest.json
solidity/broadcast/Deploy2.s.sol/8453/: run-latest.json
solidity/script/: Deploy.s.sol  Deploy2.s.sol  FillOrder.s.sol  PrintOrderID.s.sol  SetRemote.s.sol  SettleOrders.s.sol  SubmitOrder.s.sol  Upgrade.s.sol
solidity/script/7683/: DeployGoFastERC7683.s.sol  SubmitOrder.s.sol  Upgrade.s.sol
solidity/src/: FastTransferGateway.sol  GoFastCaller.sol  GoFastERC7683.sol  GoFastMulticall.sol
solidity/src/erc7683/: ERC7683.sol
solidity/src/libraries/: OrderEncoder.sol
solidity/test/: ERC7683.t.sol  FastTransferGateway.t.sol
test/: README.md  bun.lockb  index.ts
(+43 files in other folders)
