[package]
name = "cw-7683"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema                       = { workspace = true }
cosmwasm-std                          = { workspace = true }
cw2                                   = { workspace = true }
thiserror                             = { workspace = true }
cw-ownable                            = { workspace = true }
cw-storage-plus                       = { workspace = true }
serde                                 = { workspace = true }
go-fast                               = { workspace = true }
